# NeuralNetwork

./: .clang-format  .clang-tidy  .cmake-format  CMakeLists.txt  README.md  defaults.h
example/: CMakeLists.txt  main.cpp
include/neural/: activation_functions.h  differentiable.h  loss_functions.h  neural_network.h
src/: defaults.h.in  layer.cpp  layer.h  neural_network.cpp  neural_network_impl.cpp  neural_network_impl.h
src/activation/: linear.cpp  relu.cpp  sigmoid.cpp  soft_max.cpp
src/differentiable/: differentiable.h
src/loss/: cross_entropy.cpp  mse.cpp
tests/: CMakeLists.txt  cross_entropy.cpp  differentiable.cpp  layer.cpp  linear.cpp  mse.cpp  neural_network_impl.cpp  relu.cpp  sigmoid.cpp  soft_max.cpp
